src/spartan.less
/* ... */
// simple custom column name with width
.grid-col-set(@col-name, @col-span) when (@col-span >= 0) {
	@column-fullname: ~'.@{spartan-namespace}@{col-name}';
	
	> @{column-fullname} {
		.grid-span(@col-span);
	}
}

// custom column with width and offset
.grid-col-set(@col-name, @col-span, @offset) when (@col-span >= 0) {
	@column-fullname: ~'.@{spartan-namespace}@{col-name}';
	
	> @{column-fullname} {
		.grid-span(@col-span);
		.grid-offset(@offset);
	}
}

// custom column with width and reordering, apply only reorder if offset is 0
.grid-col-set(@col-name, @col-span, @offset, @reorder) when (@col-span >= 0) and (@offset = 0) {
	@column-fullname: ~'.@{spartan-namespace}@{col-name}';
	
	> @{column-fullname} {
		.grid-span(@col-span);
		.grid-reorder(@reorder);
	}
}

// custom column with width and offset, apply only offset if reorder is 0
.grid-col-set(@col-name, @col-span, @offset, @reorder) when (@col-span >= 0) and (abs(@reorder) = 0) {
	@column-fullname: ~'.@{spartan-namespace}@{col-name}';
	
	> @{column-fullname} {
		.grid-span(@col-span);
		.grid-offset(@offset);
	}
}

// custom column with width, offset and reordering, apply both if offset is not 0
.grid-col-set(@col-name, @col-span, @offset, @reorder) when (@col-span >= 0) and (abs(@offset) > 0) {
	@column-fullname: ~'.@{spartan-namespace}@{col-name}';
	
	> @{column-fullname} {
		.grid-span(@col-span);
		.grid-offset(@offset);
		.grid-reorder(@reorder);
	}
}

// predefined col class with width and proper clearing
.grid-col-set-equal(@col-span) when (@col-span >= 0) {
	@spartan-clear: @spartan-grid-max-cols / @col-span;

	// use default col-set mixin to generate selector
	.grid-col-set(col, @col-span);

	// with equal columns, clear every nth element for proper alignment
	.grid-col-clear(@spartan-clear);
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// CORE STYLES

// core variables and mixins
.spartan-core(@ns) {
	// Float precision used for rounding is the most important variable because we get different behaviours over browsers
	// and certain grid container widths. Note that rounding issues only exist for width and padding style properties.
	// 
	// There are two factors to consider when adjusting the precision:
	// - precision value itself
	// - using round(), floor() or ceil() to calculate width and padding (column gutter)
	// 
	// Tests have shown these behaviours:
	// 
	// - Using precision < 3:
	//     - We get inaccurate values with round(), floor(), and ceil()
	// - Using precision = 3:
	//     - We get inaccurate values in Safari when using floor(),
	//     - We get inaccurate values with round() and ceil() which leads to jumping columns,
	//       with round() starting in containers larger than ~800px (FF)
	// - Using precision = 4:
	//     - We get inaccurate values in Safari when using round() and floor()
	//     - We get an overall good behaviour when using ceil(),
	//       columns will start jumping in containers larger than ~2200px (FF)
	// - Using precision > 4:
	//     - We get inaccurate values in Safari with round() and floor()
	//     - We get an overall good behaviour when using ceil()
	// 
	// Recommendation:
	// Using a float precision of 5 together with ceil() seems to be the smallest possible,
	// most accurate amount for a future-proof grid system.
	@spartan-grid-precision: 5;

	.set-namespace(@ns) when not (@ns = '') {
		@spartan-namespace: ~'@{ns}-';
	}
	.set-namespace(@ns) when (default()) {
		@spartan-namespace: ~'@{ns}';
	}

	.set-namespace(@ns);
	
	// prefixed clearfix mixin from h5bp for grid only
	.spartan-cf() {
		&:before,
		&:after {
			content: " ";
			display: table;
		}

		&:after {
			clear: both;
		}
	}

	// prefixed box sizing mixin
	.spartan-box-sizing(@boxmodel: border-box) {
		-webkit-box-sizing: @boxmodel;
		-moz-box-sizing: @boxmodel;
		box-sizing: @boxmodel;
	}
	
	.spartan-base-style('both') {
		display: block;
		// make sure no shorthand properties interfere with grid styles
		margin-right: 0 !important;
		padding-right: 0 !important;
	}
	
	.spartan-base-style('row') {
		.spartan-cf();
		padding-left: 0 !important;
	}
	
	.spartan-base-style('col') {
		// make sure we have the correct box sizing for gutter padding
		.spartan-box-sizing();
		float: left;
		margin-left: 0 !important;
		// columns should per default span the whole width if none is set
		width: 100%;
	}
}

// base grid layout styles, valid for every grid setup
.spartan-core-selectors() {
	.@{spartan-namespace}row,
	.@{spartan-namespace}col {
		.spartan-base-style('both');
	}

	.@{spartan-namespace}row {
		.spartan-base-style('row');

		// used to .push and .pull columns
		&.@{spartan-namespace}reorder {
			.grid-row-reorder();
		}
	}

	.@{spartan-namespace}col {
		.spartan-base-style('col');
	}
}

// don't generate any css but just unlock core variables and mixins
.grid-core(@ns: g, @generate: true) when (@generate = false) {
	.spartan-core(@ns);
}

.grid-core(@ns: g, @generat: true) when (@ns = false) {
	.spartan-core('g');
}

.grid-core(@ns: g, @generate: true) when (@ns = true) {
	.spartan-core('g');
	.spartan-core-selectors();
}

// also generate core selectors
.grid-core(@ns: g, @generate: true) when (default()) {
	.spartan-core(@ns);
	.spartan-core-selectors();
}

// all necessary row styles with gutter
.grid-row(@gutter: @spartan-grid-gutter) {
	.spartan-base-style('both');
	.spartan-base-style('row');
	.spartan-row-gutter(@gutter);
}

.grid-row-reorder() {
	> .@{spartan-namespace}col {
		position: relative;
	}
}

// all necessary column styles with gutter
.grid-col(@gutter: @spartan-grid-gutter) {
	.spartan-base-style('both');
	.spartan-base-style('col');
	.spartan-col-gutter(@gutter);
}
/* ... */

